Bug 1765214 - Fix DCSurfaceVideo::mSwapChainSurfaceHandle initialization r=gfx-reviewers,jrmuizel,a=dsmith

DCSurfaceVideo::mSwapChainSurfaceHandle is not initialized. It causes invalid handle close in DCSurfaceVideo::ReleaseDecodeSwapChainResources().

Differential Revision: https://phabricator.services.mozilla.com/D143966